api sec demo