@@ -1,10 +1,10 @@
 package gdsc.apisec.controllers;
 
 
-import gdsc.apisec.model.AppUser;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.User;
 import org.springframework.security.oauth2.jwt.JwtClaimsSet;
 import org.springframework.security.oauth2.jwt.JwtEncoder;
 import org.springframework.security.oauth2.jwt.JwtEncoderParameters;
@@ -14,7 +14,6 @@ import org.springframework.web.bind.annotation.RestController;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -23,16 +22,16 @@ public class AuthController {
     private final JwtEncoder jwtEncoder;
 
     @PostMapping("/login")
-    public String login() {
-        AppUser user = (AppUser) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        List<String> auth = user.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList());
+    public String login(Authentication authentication) {
+        User user = (User) authentication.getPrincipal();
+        List<String> auths = user.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
         Instant now = Instant.now();
         JwtClaimsSet claims = JwtClaimsSet.builder()
                 .issuer("self")
                 .issuedAt(now)
                 .expiresAt(now.plus(7, ChronoUnit.DAYS))
-                .subject(user.getId().toString())
-                .claim("scope", auth)
+                .subject(user.getUsername())
+                .claim("scope", auths)
                 .build();
         return jwtEncoder.encode(JwtEncoderParameters.from(claims)).getTokenValue();
     }
